--- a/Landing1/css/style.css
+++ b/Landing1/css/style.css
@@ -1,3 +1,15 @@
+@media (min-width: 768px) {
+  #slider.carousel-caption {
+    bottom: 15em; }
+  #slider h5 {
+    font-size: 4em;
+    text-shadow: #000 2px 3px; }
+  #slider.btn {
+    padding: 0.6 1.6em;
+    font-size: 1.2em; }
+
+  .carousel-indicators {
+    bottom: 7em; } }
 * {
   margin: 0;
   padding: 0;
@@ -42,3 +54,32 @@
   margin: 0 1em; }
 
 /*Slider*/
+#slider {
+  margin-top: 8em;
+  margin-bottom: 1em; }
+  #slider.carousel-caption {
+    bottom: 3em; }
+    #slider.carousel-caption h5 {
+      font-size: 2.5em;
+      text-shadow: #000 2px 2px; }
+  #slider.btn {
+    padding: 0.3 0.8em;
+    font-size: 1em;
+    margin-top: 1em; }
+
+.btn {
+  border-radius: 0; }
+
+.carousel-control-prev i {
+  color: #111;
+  font-size: 3em; }
+
+.carousel-control-next i {
+  color: #111;
+  font-size: 3em; }
+
+.carousel-indicators[data-bs-target] {
+  background-color: #222;
+  opacity: 0.8; }
+.carousel-indicators.active {
+  background-color: #000; }
