--- a/Landing1/scss/main.scss
+++ b/Landing1/scss/main.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "responsive";
 
 * {
   margin: 0;
@@ -66,3 +67,49 @@
 }
 
 /*Slider*/
+
+#slider {
+  margin-top: 8em;
+  margin-bottom: 1em;
+  &.carousel-caption {
+    bottom: 3em;
+
+    & h5 {
+      font-size: 2.5em;
+      text-shadow: $negro-color 2px 2px;
+    }
+  }
+  &.btn {
+    padding: 0.3 0.8em;
+    font-size: 1em;
+    margin-top: 1em;
+  }
+}
+
+.btn {
+  border-radius: 0;
+}
+
+.carousel-control-prev {
+  & i {
+    color: $negro-color-claro1;
+    font-size: 3em;
+  }
+}
+
+.carousel-control-next {
+  & i {
+    color: $negro-color-claro1;
+    font-size: 3em;
+  }
+}
+
+.carousel-indicators {
+  &[data-bs-target] {
+    background-color: $negro-color-claro2;
+    opacity: 0.8;
+  }
+  &.active {
+    background-color: $negro-color;
+  }
+}
